2016-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/set_commands.c (set_host): Correctly setdump_hostname
	  when the input is quoted with double quote

2016-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* config/set_full_version: Fix for new URL path

2016-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: Typo
	* ReleaseNotes: Typo

2016-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: Change in 3.3.8
	* ReleaseNotes: Change in 3.3.8

2015-12-10  Xu Han <xhan@carbonite.com>
	* packaging/common/post_inst_functions.sh: Adding the correct
	  Amanda sbin path to Solaris Amandabackup user profile file

2015-12-09  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndma_tape.c (ndmta_read_quantum): Fix setting
	  ta->mover_state.record_num

2015-12-09  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: Fir debugging message
	* common-src/glib-util.c: Improve error message
	* perl/Amanda/Extract.pm: Fix in error path

2015-12-09  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amlog-script.pl, application-src/ampgsql.pl,
	  application-src/amraw.pl, application-src/amsamba.pl,
	  application-src/amsuntar.pl, application-src/amzfs-sendrecv.pl,
	  application-src/amzfs-snapshot.pl,
	  application-src/script-email.pl: Log the arguments

2015-12-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Change message

2015-12-04  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/amrecover.c: Use the amanda-client.conf hostname setting

2015-12-04  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Add amanda-client 'hostname' global setting
	* common-src/conffile.h: Add CNF_HOSTNAME
	* perl/Amanda/Config.swg: Add CNF_HOSTNAME
	* man/xml-source/amanda-client.conf.5.xml: Document hostname

2015-12-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Use getstatefname()

2015-12-04  Jean-Louis Martineau <martineau@zmanda.com>